<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kdg.kandoe.kandoeandroid.FirstActivity"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/circel_afbeelding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kandoe_circle"
        android:src="@drawable/circle_large"/>

    <Button
        android:id="@+id/aanmeld_button"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:theme="@style/MyButton"/>

    <Button
        android:id="@+id/registreer_button"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:theme="@style/MyRegisterButton"/>
</LinearLayout>
